# rag-kit

./: .env.example  .gitignore  README.md  detect.py  pyproject.toml
.github/workflows/: deploy.yml
apps/huwei_landmarks/: __init__.py  config.py  detect.py  line_bot.py  schema.py  server.py
src/rag/: __init__.py  pipeline.py
src/rag/data/: __init__.py  base.py  csv_source.py  google_sheet.py
src/rag/generator/: __init__.py  base.py  gemini.py
src/rag/retriever/: __init__.py  all_in_prompt.py  base.py
tests/: evaluate.py  test_data_layer.py  test_retrievers.py  test_webhook.py
tests/fixtures/: landmarks_mini.csv
